fix svg overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -149,15 +149,18 @@ html, body {
         cursor: pointer;
     }
 
-    .container {
+    .hh-component-inner {
         height: 100%;
         position: relative;
+        overflow: visible;
     }
 
     svg {
         overflow: visible;
         height: 100%;
         width: auto;
+        max-width: 100%;
+        max-height: 100%;
         left: 0;
     }
 
@@ -165,7 +168,7 @@ html, body {
 
 .gurney {
     .hh-component {
-        .container {
+        .hh-component-inner {
             background-color: #eee;
             &.correct {
                 background-color: rgba(204, 255, 204, .5);
@@ -182,31 +185,37 @@ html, body {
 
 .hh-donors {
     height: 100%;
+    position: relative;
 
-    ul {
-        padding-left: 0;
-        height: 100%;
+    $donorsTopHeight: 2rem;
+
+    .hh-donors-top {
+        position: absolute;
+        top: 0;
+        height: $donorsTopHeight;
+        width: 100%;
     }
 
-    li {
-        display: inline-block;
-        margin-right: 25px;
-        border: thin solid #ccc;
-        &:hover {
-            background: #ccc;
+    .hh-donors-bottom {
+        position: absolute;
+        top: $donorsTopHeight;
+        bottom: 0;
+        width: 100%;
+
+        ul {
+            padding-left: 0;
+            height: 100%;
+            margin-left: 0;
         }
-    }
-}
 
-.hh-results {
-    font-size: x-large;
-
-    &.correct {
-        color: green;
-    }
-
-    &.incorrect {
-        color: red;
+        li {
+            display: inline-block;
+            margin-right: 25px;
+            border: thin solid #ccc;
+            &:hover {
+                background: #ccc;
+            }
+        }
     }
 
 }
